# sgemm_with_cuda

./: CMakeLists.txt  README.md
include/: sgemm.cuh
src/: main.cpp  sgemm.cu
